@@ -2,9 +2,11 @@
 <beans>
 
 	<bean id="goAnnotManager" class="edu.mcw.rgd.goa.GoAnnotManager">
-        <property name="version" value="GOA rat annotation pipeline  -- version 2021-03-17" />
+        <property name="version" value="GOA rat annotation pipeline  -- version 2021-04-23" />
 	    <property name="dataValidation" ref="dataValidation"/>
 	    <property name="dao" ref="dao"/>
+        <property name="pubMedManager" ref="pubMedManager"/>
+
 	    <property name="specialRefRgdId" value="1600115"/>
 
         <property name="goRelFile" value="http://current.geneontology.org/ontology/extensions/gorel.obo"/>
@@ -34,15 +36,6 @@
           concatenations of log files duplAnnot.log and unMatchedDbObjID.log  -->
         <property name="goaRgdTxt" value="data/goa_rgd.txt" />
 
-        <property name="importPubMedUrl" value="/rgdweb/pubmed/importReferences.html?pmid_list=" />
-        <property name="importPubmedToolHost">
-            <map>
-                <entry key="travis.rgd.mcw.edu" value="https://dev.rgd.mcw.edu/" />
-                <entry key="rgd-c6vhv52" value="https://dev.rgd.mcw.edu/" />
-                <entry key="rgd-mxl9262j2k" value="https://dev.rgd.mcw.edu/" />
-                <entry key="reed.rgd.mcw.edu" value="https://pipelines.rgd.mcw.edu/" />
-            </map>
-        </property>
         <property name="refRgdIdsForGoPipelines">
             <set>
                 <value>1303377</value><!-- olfactory genes one-time load-->
@@ -66,5 +59,17 @@
         <property name="createdBy" value="69"/>
         <property name="lastModifiedBy" value="69"/>
         <property name="staleAnnotDeleteThreshold" value="5%" />
+    </bean>
+
+    <bean id="pubMedManager" class="edu.mcw.rgd.goa.PubMedManager">
+        <property name="importPubMedUrl" value="/rgdweb/pubmed/importReferences.html?pmid_list=" />
+        <property name="importPubmedToolHost">
+            <map>
+                <entry key="travis.rgd.mcw.edu" value="https://dev.rgd.mcw.edu/" />
+                <entry key="rgd-c6vhv52" value="https://dev.rgd.mcw.edu/" />
+                <entry key="rgd-mxl9262j2k" value="https://dev.rgd.mcw.edu/" />
+                <entry key="reed.rgd.mcw.edu" value="https://pipelines.rgd.mcw.edu/" />
+            </map>
+        </property>
     </bean>
 </beans>
