@@ -1,3 +1,6 @@
+Apr 23, 2021
+  refactored code: all PubMed qc/import code moved to separate class PubMedManager
+
 Mar 17, 2021
   updated source URL for gorel.obo file (used as source of obsolete GO relations)
 
